--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "candidai-chrome-extension",
   "version": "1.0.0",
   "description": "AI-powered meeting assistant Chrome extension with advanced transcription and intelligent suggestions",
+  "author": "Veera Babu Manyam <veera@sawas.org>",
+  "license": "Apache-2.0",
   "private": true,
   "scripts": {
     "build": "npm run type-check && npm run lint && webpack --mode production",
