--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,17 @@ dist/
 build/
 *.zip
 
-# Development
+# Development and Testing
 .DS_Store
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+test-*.html
+test-*.js
+**/test-server.js
+visual-regression-test.js
 
 # IDE
 .vscode/
@@ -28,6 +32,14 @@ build/
 # Testing
 coverage/
 .nyc_output/
+*test-report*.md
+*TEST_REPORT*.md
+*COMPREHENSIVE_TEST*.md
+*COMPLETE_NAVIGATION*.md
+
+# Documentation (generated/temporary)
+IMPLEMENTATION_SUMMARY.md
+README-TYPESCRIPT-MIGRATION.md
 
 # Logs
 logs/
@@ -36,6 +48,7 @@ logs/
 # OS generated files
 Thumbs.db
 Desktop.ini
+desktop.ini
 
 # Temporary files
 *.tmp
@@ -49,3 +62,8 @@ Desktop.ini
 # Chrome extension specific
 *.pem
 *.crx
+
+# Generated JavaScript from TypeScript (keep source .ts files only)
+# Uncomment these if you want to exclude transpiled JS files
+# src/**/*.js
+# !src/**/navigation-fallback.js
