--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "build": "npm run type-check && npm run lint && webpack --mode production",
     "build:simple": "webpack --mode production",
     "build:dev": "webpack --mode development",
+    "build:clean": "npm run clean && webpack --mode production",
+    "build:force": "rimraf dist && webpack --mode production",
     "watch": "webpack --mode development --watch",
     "clean": "rimraf dist",
-    "prebuild": "npm run clean",
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
     "lint": "eslint src --ext .js,.ts,.json",
@@ -31,7 +32,8 @@
     "migrate:check": "node scripts/migration-checker.js",
     "migrate:service": "node scripts/migrate-service.js",
     "prepare": "husky install",
-    "validate": "npm run type-check && npm run lint && npm run test && npm run format:check"
+    "validate": "npm run type-check && npm run lint && npm run test && npm run format:check",
+    "icons": "node create-icons.js"
   },
   "dependencies": {
     "mammoth": "^1.6.0",
