--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
+    "sharp": "^0.34.2",
     "style-loader": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.0",
