--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "candidai-chrome-extension",
-  "version": "1.0.2",
-  "description": "AI-powered meeting assistant Chrome extension with advanced transcription and intelligent suggestions",
+  "version": "1.0.3",
+  "description": "AI-powered interview assistance Chrome extension with advanced LLM integration",
   "author": "Veera Babu Manyam <veera@sawas.org>",
   "license": "Apache-2.0",
   "private": true,
