📝 Update README with logo and exclude bmad-agent from Git - Added CandidAI logo to README with centered styling - Updated version badge to v1.0.4 - Excluded bmad-agent directory from Git tracking in .gitignore - Removed bmad-agent files from repository

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ screenshots/
 # Uncomment these if you want to exclude transpiled JS files
 # src/**/*.js
 # !src/**/navigation-fallback.js
+
+# BMad Agent (exclude from Git)
+bmad-agent/
